# VoxelHashing_demo

./: .clang-format  .gitignore  Application.cpp  Application.h  Book1.xlsx  CMakeCache.txt  CMakeCache.txt.PROPER  CMakeLists.txt  CameraTracking.cpp  CameraTracking.cu  CameraTracking.h  CameraTrackingUtils.cu  DebugHelper.hpp  DepthMain.cpp  Doxyfile  EigenUtil.h  FBO.hpp  Frustum.cpp  Frustum.h  LinearSystem.cpp  LinearSystem.cu  LinearSystem.h  README.md  SDFRenderer.cpp  SDFRenderer.h  SDFRendererUtils.cpp  SDFRendererUtils.h  SDF_Hashtable.cpp  SDF_Hashtable.cu  SDF_Hashtable.h  SE3.cpp  SE3.h  SE3.hpp  Session.vim  ShaderProgram.hpp  Solver.cpp  Solver.cu  Solver.h  VoxelDataStructures.h  VoxelUtils.cu  (+16 more)
Analysis/: GPU.txt  GPU_fixed.txt  gold.txt
Analysis/gold_VertexDump/: gold_srcVerts_1.txt  gold_targetNormals_1.txt  gold_targetVerts_2.txt
Analysis/gpu_VertexDump/: gpu_inputVerts_2.txt  gpu_targetNormals_2.txt  gpu_targetVerts_1.txt
LOGS/: NDEBUG_log
Snapshots/July2021_afterRaycastFix/: Incorrect_depth_fusion_update_Aug2022.tscproj  Untitled Project.tscproj
cmake/: FindBoost.cmake
cuda_helper/: cudaUtil.h  cuda_SimpleMatrixUtil.h  drvapi_error_string.h  helper_cuda_drvapi.h  helper_cusolver.h  rendercheck_gl.h
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: MainShader.frag  MainShader.geom  MainShader.vert  debugSDFInfo.frag  depthWrite.frag  depthWrite.geom  depthWrite.vert  drawBox.frag  drawBox.geom  drawBox.vert  drawFrustum.frag  drawFrustum.vert  instancedCube.frag  instancedCube.vert  linearDepth.frag  passthrough.vert  raycastSDF.frag  raycastSDF.geom  raycastSDF.vert
